# OpenCPN

chart-render/: CMakeLists.txt  POC-ACCEPTANCE.md  README.md
chart-render/docs/: CHART1_DEBUG_APP.md  CHART_CONVERTER_MODULE_API.md  DRAW_ONLY_BACKEND_CONTRACT.md  HELM_WEBGPU_ARTIFACT_CONSUMER.md  HELM_WEBGPU_BROWSER_FIXTURE.md  HELM_WEB_RENDER_TARGET.md  MACHINE_LOCAL_GPU_ARTIFACT_CACHE.md  MAINTAINER_RESPONSE_MATRIX.md  METAL_BACKEND_COMPATIBILITY.md  OPENCPN_COMMUNITY_RFC_POST_DRAFT.md  OPENCPN_PUBLIC_PROOF_BRANCH.md  OPENCPN_VSG_WEBGPU_COMPATIBILITY_MATRIX.md  PERFORMANCE_POWER_BUDGET.md  PORTABLE_NAUTICAL_PACKAGE.md  PRESENTATION_COMPILER_BOUNDARY.md  PRODUCTION_GOLDEN_CORPUS.md  PRODUCTION_HARDENING_MAP.md  PUBLIC_RELEASE_HYGIENE.md  RFC_RENDER_CORE_POC.md  S100_INVENTORY_METADATA.md  S52_PRESENTATION_COMPILER.md  SOURCE_TO_RENDER_INSPECTION.md  STAKEHOLDER_DEMO.md  UPSTREAM_MODULE_INTERFACE_AUDIT.md  UPSTREAM_PRODUCTION_SLICE.md
chart-render/include/: chart1_acceptance.hpp  chart1_baseline.hpp  chart1_conformance.hpp  chart1_debug_app.hpp  chart_interchange.hpp  chart_source.hpp  conversion_trace.hpp  depth_performance.hpp  depth_quilting.hpp  depth_safety.hpp  depth_tessellation.hpp  draw_backend_contract.hpp  golden_regression.hpp  gpu_artifact_cache_contract.hpp  helm_webgpu_artifact_consumer.hpp  helm_webgpu_browser_fixture.hpp  nautical_render_model.hpp  opencpn_feature_flag_adapter.hpp  performance_budget_contract.hpp  portable_nautical_package.hpp  production_golden_corpus.hpp  production_performance_fixture.hpp  render_backend.hpp  render_scene.hpp  render_view.hpp  s52_presentation_compiler.hpp  s57_portable_package_converter.hpp  source_to_render_inspection.hpp  viewport_tile_scheduler.hpp
chart-render/s52/: s52_command_builder.cpp  s52_command_builder.hpp
chart-render/scripts/: stakeholder_demo.sh
chart-render/source/: DEPTH.md  INTERCHANGE.md  PROVENANCE.md  QA.md  README.md  chart1_acceptance.cpp  chart1_baseline.cpp  chart1_conformance.cpp  chart1_debug_app.cpp  chart_interchange.cpp  chart_source.cpp  conversion_trace.cpp  depth_performance.cpp  depth_quilting.cpp  depth_safety.cpp  depth_tessellation.cpp  draw_backend_contract.cpp  golden_regression.cpp  gpu_artifact_cache_contract.cpp  helm_webgpu_artifact_consumer.cpp  helm_webgpu_browser_fixture.cpp  nautical_render_model.cpp  opencpn_feature_flag_adapter.cpp  performance_budget_contract.cpp  portable_nautical_package.cpp  production_golden_corpus.cpp  production_performance_fixture.cpp  s52_presentation_compiler.cpp  s57_portable_package_converter.cpp  source_to_render_inspection.cpp  viewport_tile_scheduler.cpp
chart-render/tests/: chart1_baseline_smoke.cpp  chart1_conformance_smoke.cpp  chart1_debug_app_smoke.cpp  depth_performance_smoke.cpp  depth_quilting_smoke.cpp  depth_safety_smoke.cpp  depth_tessellation_smoke.cpp  draw_backend_contract_smoke.cpp  golden_regression_smoke.cpp  gpu_artifact_cache_contract_smoke.cpp  helm_webgpu_artifact_consumer_smoke.cpp  helm_webgpu_browser_fixture_export.cpp  helm_webgpu_browser_fixture_smoke.cpp  neutral_model_smoke.cpp  opencpn_feature_flag_adapter_smoke.cpp  performance_budget_contract_smoke.cpp  portable_package_roundtrip_smoke.cpp  production_golden_corpus_smoke.cpp  production_performance_fixture_smoke.cpp  s52_presentation_compiler_smoke.cpp  s57_portable_package_converter_smoke.cpp  source_to_render_inspection_smoke.cpp  source_to_render_production_fixture_smoke.cpp  upstream_production_slice_smoke.cpp  viewport_tile_scheduler_smoke.cpp  vsg_backend_production_fixture_smoke.cpp  vsg_gpu_cache_smoke.cpp
chart-render/tests/fixtures/chart-1/: README.md  acceptance.catalog.json  baseline.comparison.json  scene.commands.json
chart-render/tests/fixtures/chart-1/baselines/: README.md
chart-render/tests/fixtures/s52-presentation/: README.md  chart1-normalized-features.json  display-state-day.json
chart-render/tests/web/: helm_webgpu_fixture.spec.js  helm_webgpu_fixture_harness.html  package-lock.json  package.json
chart-render/vsg/: GPU_CACHE.md  vsg_backend.cpp  vsg_backend.hpp  vsg_gpu_cache.cpp  vsg_gpu_cache.hpp
